Refactoring and completion..

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,3 +1,4 @@
+<h1>About</h1>
 <p>
-    About application
+    ContactBook is simple test <a href="http://angularjs.org/" target="_blank">AngularJS</a> application.
 </p>
