--- a/app/templates/wizard/wizard-step-one.html
+++ b/app/templates/wizard/wizard-step-one.html
@@ -53,28 +53,28 @@
 
             <div class="form-group">
                 <label for="mobile" class="col-sm-2 control-label">Mobile</label>
-                <div class="col-sm-4">
-                    <input type="text" class="form-control" id="mobile" placeholder="Enter mobile number" ng-model="currentStep.data.mobile">
+                <div class="col-sm-3">
+                    <input type="text" class="form-control" id="mobile" ng-model="currentStep.data.mobile">
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="phone" class="col-sm-2 control-label">Phone</label>
-                <div class="col-sm-4">
-                    <input type="text" class="form-control" id="phone" placeholder="Enter phone number" ng-model="currentStep.data.phone">
+                <div class="col-sm-3">
+                    <input type="text" class="form-control" id="phone" ng-model="currentStep.data.phone">
                 </div>
             </div>
 
-            <div class="form-group" ng-show="contactType=='company'">
+            <div class="form-group" ng-show="currentStep.data.contactType==='company'">
                 <label for="fax" class="col-sm-2 control-label">Fax</label>
-                <div class="col-sm-4">
-                    <input type="text" class="form-control" id="fax" placeholder="Your fax number" ng-model="currentStep.data.fax"/>
+                <div class="col-sm-3">
+                    <input type="text" class="form-control" id="fax" ng-model="currentStep.data.fax"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="web" class="col-sm-2 control-label">Web</label>
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <input type="url" class="form-control" id="web" placeholder="http://yourweb.com/" ng-model="currentStep.data.web"/>
                 </div>
             </div>
